; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/vg/extr_vg_int_mat3x3.c_vg_mat3x3_premul_rotate.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/vg/extr_vg_int_mat3x3.c_vg_mat3x3_premul_rotate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vg_mat3x3_premul_rotate(i32* %0, float %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca float, align 4
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  store i32* %0, i32** %3, align 8
  store float %1, float* %4, align 4
  %7 = load float, float* %4, align 4
  %8 = call i32 @sin_cos_(float* %5, float* %6, float %7)
  %9 = load i32*, i32** %3, align 8
  %10 = load float, float* %5, align 4
  %11 = load float, float* %6, align 4
  %12 = call i32 @vg_mat3x3_premul_rotate_sc(i32* %9, float %10, float %11)
  ret void
}

declare dso_local i32 @sin_cos_(float*, float*, float) #1

declare dso_local i32 @vg_mat3x3_premul_rotate_sc(i32*, float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
